5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4182/executions/1582_1333.log
== TEST (2019-03-14 16:07:05) 
-- CODE:
expressao = 
print(36-3*2+8//3*2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:07:17) 
-- CODE:
expressao = 
print(36-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:07:41) 
-- CODE:
expressao = 
print(36-3**2+8/3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:07:43) 
-- CODE:
expressao = 
print(36-3**2+8/3**2*10)
-- EXECUTION TIME:
0.189649
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:08:18) 
-- CODE:
expressao = 
print(36-3*2+8/3*2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:09:58) 
-- CODE:
expressao = 
print((36-3)*(2+8)/(3*2)*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:10:00) 
-- CODE:
expressao = 
print((36-3)*(2+8)/(3*2)*10)
-- EXECUTION TIME:
0.147041
-- ERROR:
  File "/home/codebench/codes/1582/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 16:11:47) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 16:11:49) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.129885
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
